change color to all green

--- a/Action Detection Refined.ipynb
+++ b/Action Detection Refined.ipynb
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -690,13 +690,7 @@
       "3/3 [==============================] - 0s 53ms/step - loss: 0.4564 - categorical_accuracy: 0.7529\n",
       "Epoch 73/2000\n",
       "3/3 [==============================] - 0s 55ms/step - loss: 0.5202 - categorical_accuracy: 0.8000\n",
-      "Epoch 74/2000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 74/2000\n",
       "3/3 [==============================] - 0s 55ms/step - loss: 0.4829 - categorical_accuracy: 0.7765\n",
       "Epoch 75/2000\n",
       "3/3 [==============================] - 0s 53ms/step - loss: 0.6076 - categorical_accuracy: 0.6471\n",
@@ -990,13 +984,7 @@
       "3/3 [==============================] - 0s 57ms/step - loss: 0.7928 - categorical_accuracy: 0.6471\n",
       "Epoch 217/2000\n",
       "3/3 [==============================] - 0s 56ms/step - loss: 0.7858 - categorical_accuracy: 0.6941\n",
-      "Epoch 218/2000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 218/2000\n",
       "3/3 [==============================] - 0s 55ms/step - loss: 0.7481 - categorical_accuracy: 0.7059\n",
       "Epoch 219/2000\n",
       "3/3 [==============================] - 0s 56ms/step - loss: 0.7385 - categorical_accuracy: 0.6353\n",
@@ -1290,13 +1278,7 @@
       "3/3 [==============================] - 0s 58ms/step - loss: 0.5247 - categorical_accuracy: 0.7294\n",
       "Epoch 361/2000\n",
       "3/3 [==============================] - 0s 61ms/step - loss: 0.5289 - categorical_accuracy: 0.7294\n",
-      "Epoch 362/2000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 362/2000\n",
       "3/3 [==============================] - 0s 58ms/step - loss: 0.5253 - categorical_accuracy: 0.7529\n",
       "Epoch 363/2000\n",
       "3/3 [==============================] - 0s 59ms/step - loss: 0.5217 - categorical_accuracy: 0.6941\n",
@@ -1590,13 +1572,7 @@
       "3/3 [==============================] - 0s 61ms/step - loss: 0.5301 - categorical_accuracy: 0.6941\n",
       "Epoch 505/2000\n",
       "3/3 [==============================] - 0s 60ms/step - loss: 0.5232 - categorical_accuracy: 0.7647\n",
-      "Epoch 506/2000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 506/2000\n",
       "3/3 [==============================] - 0s 59ms/step - loss: 0.5297 - categorical_accuracy: 0.8118\n",
       "Epoch 507/2000\n",
       "3/3 [==============================] - 0s 58ms/step - loss: 0.5216 - categorical_accuracy: 0.6941\n",
@@ -1890,13 +1866,7 @@
       "3/3 [==============================] - 0s 62ms/step - loss: 0.5223 - categorical_accuracy: 0.7882\n",
       "Epoch 649/2000\n",
       "3/3 [==============================] - 0s 61ms/step - loss: 0.5148 - categorical_accuracy: 0.6706\n",
-      "Epoch 650/2000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 650/2000\n",
       "3/3 [==============================] - 0s 63ms/step - loss: 0.5262 - categorical_accuracy: 0.6588\n",
       "Epoch 651/2000\n",
       "3/3 [==============================] - 0s 60ms/step - loss: 0.5175 - categorical_accuracy: 0.6941\n",
@@ -2190,13 +2160,7 @@
       "3/3 [==============================] - 0s 63ms/step - loss: 0.5017 - categorical_accuracy: 0.6824\n",
       "Epoch 793/2000\n",
       "3/3 [==============================] - 0s 63ms/step - loss: 0.5384 - categorical_accuracy: 0.6941\n",
-      "Epoch 794/2000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 794/2000\n",
       "3/3 [==============================] - 0s 63ms/step - loss: 0.4930 - categorical_accuracy: 0.7765\n",
       "Epoch 795/2000\n",
       "3/3 [==============================] - 0s 61ms/step - loss: 0.5112 - categorical_accuracy: 0.6706\n",
@@ -2490,13 +2454,7 @@
       "3/3 [==============================] - 0s 63ms/step - loss: 1.2479 - categorical_accuracy: 0.3176\n",
       "Epoch 937/2000\n",
       "3/3 [==============================] - 0s 64ms/step - loss: 1.1780 - categorical_accuracy: 0.4118\n",
-      "Epoch 938/2000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 938/2000\n",
       "3/3 [==============================] - 0s 63ms/step - loss: 1.2416 - categorical_accuracy: 0.3294\n",
       "Epoch 939/2000\n",
       "3/3 [==============================] - 0s 64ms/step - loss: 1.1020 - categorical_accuracy: 0.4235\n",
@@ -4842,18 +4800,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'model' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[8], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mdel\u001b[39;00m model\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'model' is not defined"
+     ]
+    }
+   ],
    "source": [
     "del model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Sequential' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[9], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Once training is done, u do not have to train it again (no need to call the fit() finction). Just need to setup the model\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m# and compile it. then load the saved weights.\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m model \u001b[38;5;241m=\u001b[39m Sequential()\n\u001b[0;32m      4\u001b[0m model\u001b[38;5;241m.\u001b[39madd(LSTM(\u001b[38;5;241m64\u001b[39m, return_sequences\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m, activation\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrelu\u001b[39m\u001b[38;5;124m'\u001b[39m, input_shape\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m30\u001b[39m,\u001b[38;5;241m1662\u001b[39m)))\n\u001b[0;32m      5\u001b[0m model\u001b[38;5;241m.\u001b[39madd(LSTM(\u001b[38;5;241m128\u001b[39m, return_sequences\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m, activation\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrelu\u001b[39m\u001b[38;5;124m'\u001b[39m))\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'Sequential' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Once training is done, u do not have to train it again (no need to call the fit() finction). Just need to setup the model\n",
     "# and compile it. then load the saved weights.\n",
@@ -5244,13 +5226,7 @@
       "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
       "1/1 [==============================] - 0s 15ms/step\n",
       "pose3\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
       "1/1 [==============================] - 0s 15ms/step\n",
       "pose3\n",
       "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
@@ -5682,13 +5658,7 @@
       "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
       "1/1 [==============================] - 0s 15ms/step\n",
       "pose3\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
       "1/1 [==============================] - 0s 15ms/step\n",
       "pose3\n",
       "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
@@ -6120,13 +6090,7 @@
       "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
       "1/1 [==============================] - 0s 14ms/step\n",
       "pose2\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
       "1/1 [==============================] - 0s 14ms/step\n",
       "pose2\n",
       "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
