Updated to add sounds while training...

--- a/Action Detection Refined.ipynb
+++ b/Action Detection Refined.ipynb
@@ -18,14 +18,15 @@
      "text": [
       "Defaulting to user installation because normal site-packages is not writeable\n",
       "Requirement already satisfied: tensorflow==2.12.0 in c:\\users\\ashok\\appdata\\roaming\\python\\python311\\site-packages (2.12.0)\n",
-      "Requirement already satisfied: opencv-python in c:\\users\\ashok\\appdata\\roaming\\python\\python311\\site-packages (4.8.1.78)\n",
-      "Requirement already satisfied: mediapipe in c:\\users\\ashok\\appdata\\roaming\\python\\python311\\site-packages (0.10.8)\n",
+      "Requirement already satisfied: opencv-python in c:\\programdata\\anaconda3\\lib\\site-packages (4.8.1.78)\n",
+      "Requirement already satisfied: mediapipe in c:\\programdata\\anaconda3\\lib\\site-packages (0.10.7)\n",
       "Requirement already satisfied: scikit-learn in c:\\programdata\\anaconda3\\lib\\site-packages (1.3.0)\n",
       "Requirement already satisfied: matplotlib in c:\\programdata\\anaconda3\\lib\\site-packages (3.7.2)\n",
+      "Requirement already satisfied: pygame in c:\\users\\ashok\\appdata\\roaming\\python\\python311\\site-packages (2.5.2)\n",
       "Requirement already satisfied: tensorflow-intel==2.12.0 in c:\\users\\ashok\\appdata\\roaming\\python\\python311\\site-packages (from tensorflow==2.12.0) (2.12.0)\n",
-      "Requirement already satisfied: absl-py>=1.0.0 in c:\\users\\ashok\\appdata\\roaming\\python\\python311\\site-packages (from tensorflow-intel==2.12.0->tensorflow==2.12.0) (2.0.0)\n",
+      "Requirement already satisfied: absl-py>=1.0.0 in c:\\programdata\\anaconda3\\lib\\site-packages (from tensorflow-intel==2.12.0->tensorflow==2.12.0) (2.0.0)\n",
       "Requirement already satisfied: astunparse>=1.6.0 in c:\\users\\ashok\\appdata\\roaming\\python\\python311\\site-packages (from tensorflow-intel==2.12.0->tensorflow==2.12.0) (1.6.3)\n",
-      "Requirement already satisfied: flatbuffers>=2.0 in c:\\users\\ashok\\appdata\\roaming\\python\\python311\\site-packages (from tensorflow-intel==2.12.0->tensorflow==2.12.0) (23.5.26)\n",
+      "Requirement already satisfied: flatbuffers>=2.0 in c:\\programdata\\anaconda3\\lib\\site-packages (from tensorflow-intel==2.12.0->tensorflow==2.12.0) (23.5.26)\n",
       "Requirement already satisfied: gast<=0.4.0,>=0.2.1 in c:\\users\\ashok\\appdata\\roaming\\python\\python311\\site-packages (from tensorflow-intel==2.12.0->tensorflow==2.12.0) (0.4.0)\n",
       "Requirement already satisfied: google-pasta>=0.1.1 in c:\\users\\ashok\\appdata\\roaming\\python\\python311\\site-packages (from tensorflow-intel==2.12.0->tensorflow==2.12.0) (0.2.0)\n",
       "Requirement already satisfied: h5py>=2.9.0 in c:\\programdata\\anaconda3\\lib\\site-packages (from tensorflow-intel==2.12.0->tensorflow==2.12.0) (3.9.0)\n",
@@ -34,20 +35,20 @@
       "Requirement already satisfied: numpy<1.24,>=1.22 in c:\\users\\ashok\\appdata\\roaming\\python\\python311\\site-packages (from tensorflow-intel==2.12.0->tensorflow==2.12.0) (1.23.5)\n",
       "Requirement already satisfied: opt-einsum>=2.3.2 in c:\\users\\ashok\\appdata\\roaming\\python\\python311\\site-packages (from tensorflow-intel==2.12.0->tensorflow==2.12.0) (3.3.0)\n",
       "Requirement already satisfied: packaging in c:\\programdata\\anaconda3\\lib\\site-packages (from tensorflow-intel==2.12.0->tensorflow==2.12.0) (23.1)\n",
-      "Requirement already satisfied: protobuf!=4.21.0,!=4.21.1,!=4.21.2,!=4.21.3,!=4.21.4,!=4.21.5,<5.0.0dev,>=3.20.3 in c:\\users\\ashok\\appdata\\roaming\\python\\python311\\site-packages (from tensorflow-intel==2.12.0->tensorflow==2.12.0) (3.20.3)\n",
+      "Requirement already satisfied: protobuf!=4.21.0,!=4.21.1,!=4.21.2,!=4.21.3,!=4.21.4,!=4.21.5,<5.0.0dev,>=3.20.3 in c:\\programdata\\anaconda3\\lib\\site-packages (from tensorflow-intel==2.12.0->tensorflow==2.12.0) (3.20.3)\n",
       "Requirement already satisfied: setuptools in c:\\programdata\\anaconda3\\lib\\site-packages (from tensorflow-intel==2.12.0->tensorflow==2.12.0) (68.0.0)\n",
       "Requirement already satisfied: six>=1.12.0 in c:\\programdata\\anaconda3\\lib\\site-packages (from tensorflow-intel==2.12.0->tensorflow==2.12.0) (1.16.0)\n",
       "Requirement already satisfied: termcolor>=1.1.0 in c:\\users\\ashok\\appdata\\roaming\\python\\python311\\site-packages (from tensorflow-intel==2.12.0->tensorflow==2.12.0) (2.3.0)\n",
       "Requirement already satisfied: typing-extensions>=3.6.6 in c:\\programdata\\anaconda3\\lib\\site-packages (from tensorflow-intel==2.12.0->tensorflow==2.12.0) (4.7.1)\n",
       "Requirement already satisfied: wrapt<1.15,>=1.11.0 in c:\\programdata\\anaconda3\\lib\\site-packages (from tensorflow-intel==2.12.0->tensorflow==2.12.0) (1.14.1)\n",
-      "Requirement already satisfied: grpcio<2.0,>=1.24.3 in c:\\users\\ashok\\appdata\\roaming\\python\\python311\\site-packages (from tensorflow-intel==2.12.0->tensorflow==2.12.0) (1.59.3)\n",
+      "Requirement already satisfied: grpcio<2.0,>=1.24.3 in c:\\users\\ashok\\appdata\\roaming\\python\\python311\\site-packages (from tensorflow-intel==2.12.0->tensorflow==2.12.0) (1.59.2)\n",
       "Requirement already satisfied: tensorboard<2.13,>=2.12 in c:\\users\\ashok\\appdata\\roaming\\python\\python311\\site-packages (from tensorflow-intel==2.12.0->tensorflow==2.12.0) (2.12.3)\n",
       "Requirement already satisfied: tensorflow-estimator<2.13,>=2.12.0 in c:\\users\\ashok\\appdata\\roaming\\python\\python311\\site-packages (from tensorflow-intel==2.12.0->tensorflow==2.12.0) (2.12.0)\n",
       "Requirement already satisfied: keras<2.13,>=2.12.0 in c:\\users\\ashok\\appdata\\roaming\\python\\python311\\site-packages (from tensorflow-intel==2.12.0->tensorflow==2.12.0) (2.12.0)\n",
       "Requirement already satisfied: tensorflow-io-gcs-filesystem>=0.23.1 in c:\\users\\ashok\\appdata\\roaming\\python\\python311\\site-packages (from tensorflow-intel==2.12.0->tensorflow==2.12.0) (0.31.0)\n",
       "Requirement already satisfied: attrs>=19.1.0 in c:\\programdata\\anaconda3\\lib\\site-packages (from mediapipe) (22.1.0)\n",
-      "Requirement already satisfied: opencv-contrib-python in c:\\users\\ashok\\appdata\\roaming\\python\\python311\\site-packages (from mediapipe) (4.8.1.78)\n",
-      "Requirement already satisfied: sounddevice>=0.4.4 in c:\\users\\ashok\\appdata\\roaming\\python\\python311\\site-packages (from mediapipe) (0.4.6)\n",
+      "Requirement already satisfied: opencv-contrib-python in c:\\programdata\\anaconda3\\lib\\site-packages (from mediapipe) (4.8.1.78)\n",
+      "Requirement already satisfied: sounddevice>=0.4.4 in c:\\programdata\\anaconda3\\lib\\site-packages (from mediapipe) (0.4.6)\n",
       "Requirement already satisfied: scipy>=1.5.0 in c:\\programdata\\anaconda3\\lib\\site-packages (from scikit-learn) (1.11.1)\n",
       "Requirement already satisfied: joblib>=1.1.1 in c:\\programdata\\anaconda3\\lib\\site-packages (from scikit-learn) (1.2.0)\n",
       "Requirement already satisfied: threadpoolctl>=2.0.0 in c:\\programdata\\anaconda3\\lib\\site-packages (from scikit-learn) (2.2.0)\n",
@@ -83,14 +84,23 @@
     }
    ],
    "source": [
-    "!pip install tensorflow==2.12.0 opencv-python mediapipe scikit-learn matplotlib"
+    "!pip install tensorflow==2.12.0 opencv-python mediapipe scikit-learn matplotlib pygame"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pygame 2.5.2 (SDL 2.28.3, Python 3.11.5)\n",
+      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
+     ]
+    }
+   ],
    "source": [
     "import cv2\n",
     "import numpy as np\n",
@@ -98,7 +108,7 @@
     "from matplotlib import pyplot as plt\n",
     "import time\n",
     "import mediapipe as mp\n",
-    "import winsound"
+    "import pygame"
    ]
   },
   {
@@ -251,19 +261,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[21], line 17\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m sequence \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(start_folder, start_folder\u001b[38;5;241m+\u001b[39mno_sequences):\n\u001b[0;32m     16\u001b[0m     ready_sound\u001b[38;5;241m.\u001b[39mplay()\n\u001b[1;32m---> 17\u001b[0m     cv2\u001b[38;5;241m.\u001b[39mwaitKey(\u001b[38;5;241m3000\u001b[39m)\n\u001b[0;32m     18\u001b[0m     start_sound\u001b[38;5;241m.\u001b[39mplay()\n\u001b[0;32m     19\u001b[0m     cv2\u001b[38;5;241m.\u001b[39mwaitKey(\u001b[38;5;241m100\u001b[39m)\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
+    "pygame.init()\n",
+    "pygame.mixer.init()\n",
+    "ready_sound=pygame.mixer.Sound(\"getready.wav\")\n",
+    "start_sound=pygame.mixer.Sound(\"startpose.wav\")\n",
+    "end_sound=pygame.mixer.Sound(\"endpose.wav\")\n",
+    "\n",
     "cap = cv2.VideoCapture(0)\n",
     "# Set mediapipe model \n",
-    "with mp_holistic.Holistic(min_detection_confidence=0.5, min_tracking_confidence=0.5) as holistic:\n",
+    "with mp_holistic.Holistic(min_detection_confidence=0.9) as holistic:\n",
     "    \n",
     "    # NEW LOOP\n",
     "    # Loop through actions\n",
     "    for action in actions:\n",
     "        # Loop through sequences aka videos\n",
     "        for sequence in range(start_folder, start_folder+no_sequences):\n",
+    "            ready_sound.play()\n",
+    "            cv2.waitKey(3000)\n",
+    "            start_sound.play()\n",
+    "            cv2.waitKey(100)\n",
     "            # Loop through video length aka sequence length\n",
     "            for frame_num in range(sequence_length):\n",
     "\n",
@@ -278,17 +310,12 @@
     "                \n",
     "                # NEW Apply wait logic\n",
     "                if frame_num == 0: \n",
-    "                    cv2.putText(image, 'GET READY IN BASE POSITION', (120,200), \n",
-    "                               cv2.FONT_HERSHEY_SIMPLEX, 1, (0,255, 0), 4, cv2.LINE_AA)\n",
     "                    cv2.putText(image, 'Collecting frames for {} Video Number {}'.format(action, sequence), (15,12), \n",
     "                               cv2.FONT_HERSHEY_SIMPLEX, 0.5, (0, 0, 255), 1, cv2.LINE_AA)\n",
     "                    # Show to screen\n",
-    "                    cv2.imshow('OpenCV Feed', image)\n",
-    "                    winsound.Beep(2500,500)\n",
-    "                    cv2.waitKey(3000)\n",
+    "                    cv2.imshow('OpenCV Feed', image)   \n",
     "                    cv2.putText(image, 'STARTING', (120,200), \n",
     "                               cv2.FONT_HERSHEY_SIMPLEX, 1, (0,255, 0), 4, cv2.LINE_AA)\n",
-    "                    winsound.Beep(1000,1000)\n",
     "                else: \n",
     "                    cv2.putText(image, 'Collecting frames for {} Video Number {}'.format(action, sequence), (15,12), \n",
     "                               cv2.FONT_HERSHEY_SIMPLEX, 0.5, (0, 0, 255), 1, cv2.LINE_AA)\n",
@@ -299,10 +326,11 @@
     "                keypoints = extract_keypoints(results)\n",
     "                npy_path = os.path.join(DATA_PATH, action, str(sequence), str(frame_num))\n",
     "                np.save(npy_path, keypoints)\n",
-    "\n",
     "                # Break gracefully\n",
     "                if cv2.waitKey(10) & 0xFF == ord('q'):\n",
     "                    break\n",
+    "            end_sound.play()\n",
+    "            cv2.waitKey(3000)\n",
     "        cv2.waitKey(30000)                \n",
     "cap.release()\n",
     "cv2.destroyAllWindows()"
@@ -310,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -704,13 +732,7 @@
       "2/2 [==============================] - 0s 51ms/step - loss: 0.5958 - categorical_accuracy: 0.7719\n",
       "Epoch 73/1500\n",
       "2/2 [==============================] - 0s 56ms/step - loss: 0.9472 - categorical_accuracy: 0.5965\n",
-      "Epoch 74/1500\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 74/1500\n",
       "2/2 [==============================] - 0s 56ms/step - loss: 0.5536 - categorical_accuracy: 0.6667\n",
       "Epoch 75/1500\n",
       "2/2 [==============================] - 0s 46ms/step - loss: 0.3211 - categorical_accuracy: 0.9123\n",
@@ -1004,13 +1026,7 @@
       "2/2 [==============================] - 0s 52ms/step - loss: 0.0078 - categorical_accuracy: 1.0000\n",
       "Epoch 217/1500\n",
       "2/2 [==============================] - 0s 58ms/step - loss: 0.0084 - categorical_accuracy: 1.0000\n",
-      "Epoch 218/1500\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 218/1500\n",
       "2/2 [==============================] - 0s 56ms/step - loss: 0.0071 - categorical_accuracy: 1.0000\n",
       "Epoch 219/1500\n",
       "2/2 [==============================] - 0s 50ms/step - loss: 0.0074 - categorical_accuracy: 1.0000\n",
@@ -1300,13 +1316,7 @@
       "2/2 [==============================] - 0s 54ms/step - loss: 4.7644e-04 - categorical_accuracy: 1.0000\n",
       "Epoch 359/1500\n",
       "2/2 [==============================] - 0s 55ms/step - loss: 4.7212e-04 - categorical_accuracy: 1.0000\n",
-      "Epoch 360/1500\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 360/1500\n",
       "2/2 [==============================] - 0s 55ms/step - loss: 4.6751e-04 - categorical_accuracy: 1.0000\n",
       "Epoch 361/1500\n",
       "2/2 [==============================] - 0s 54ms/step - loss: 4.6213e-04 - categorical_accuracy: 1.0000\n",
@@ -1592,13 +1602,7 @@
       "2/2 [==============================] - 0s 53ms/step - loss: 1.7734e-04 - categorical_accuracy: 1.0000\n",
       "Epoch 499/1500\n",
       "2/2 [==============================] - 0s 59ms/step - loss: 1.7623e-04 - categorical_accuracy: 1.0000\n",
-      "Epoch 500/1500\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 500/1500\n",
       "2/2 [==============================] - 0s 54ms/step - loss: 1.7538e-04 - categorical_accuracy: 1.0000\n",
       "Epoch 501/1500\n",
       "2/2 [==============================] - 0s 50ms/step - loss: 1.7422e-04 - categorical_accuracy: 1.0000\n",
@@ -1884,13 +1888,7 @@
       "2/2 [==============================] - 0s 54ms/step - loss: 8.9951e-05 - categorical_accuracy: 1.0000\n",
       "Epoch 639/1500\n",
       "2/2 [==============================] - 0s 53ms/step - loss: 8.9597e-05 - categorical_accuracy: 1.0000\n",
-      "Epoch 640/1500\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 640/1500\n",
       "2/2 [==============================] - 0s 56ms/step - loss: 8.9158e-05 - categorical_accuracy: 1.0000\n",
       "Epoch 641/1500\n",
       "2/2 [==============================] - 0s 58ms/step - loss: 8.8836e-05 - categorical_accuracy: 1.0000\n",
@@ -2176,13 +2174,7 @@
       "2/2 [==============================] - 0s 57ms/step - loss: 5.5287e-05 - categorical_accuracy: 1.0000\n",
       "Epoch 779/1500\n",
       "2/2 [==============================] - 0s 55ms/step - loss: 5.5139e-05 - categorical_accuracy: 1.0000\n",
-      "Epoch 780/1500\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 780/1500\n",
       "2/2 [==============================] - 0s 55ms/step - loss: 5.4955e-05 - categorical_accuracy: 1.0000\n",
       "Epoch 781/1500\n",
       "2/2 [==============================] - 0s 72ms/step - loss: 5.4786e-05 - categorical_accuracy: 1.0000\n",
@@ -2468,13 +2460,7 @@
       "2/2 [==============================] - 0s 45ms/step - loss: 3.6875e-05 - categorical_accuracy: 1.0000\n",
       "Epoch 919/1500\n",
       "2/2 [==============================] - 0s 57ms/step - loss: 3.6777e-05 - categorical_accuracy: 1.0000\n",
-      "Epoch 920/1500\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 920/1500\n",
       "2/2 [==============================] - 0s 57ms/step - loss: 3.6696e-05 - categorical_accuracy: 1.0000\n",
       "Epoch 921/1500\n",
       "2/2 [==============================] - 0s 57ms/step - loss: 3.6578e-05 - categorical_accuracy: 1.0000\n",
@@ -2758,13 +2744,7 @@
       "2/2 [==============================] - 0s 55ms/step - loss: 2.5909e-05 - categorical_accuracy: 1.0000\n",
       "Epoch 1058/1500\n",
       "2/2 [==============================] - 0s 45ms/step - loss: 2.5838e-05 - categorical_accuracy: 1.0000\n",
-      "Epoch 1059/1500\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 1059/1500\n",
       "2/2 [==============================] - 0s 56ms/step - loss: 2.5780e-05 - categorical_accuracy: 1.0000\n",
       "Epoch 1060/1500\n",
       "2/2 [==============================] - 0s 54ms/step - loss: 2.5717e-05 - categorical_accuracy: 1.0000\n",
@@ -3046,13 +3026,7 @@
       "2/2 [==============================] - 0s 62ms/step - loss: 1.8943e-05 - categorical_accuracy: 1.0000\n",
       "Epoch 1196/1500\n",
       "2/2 [==============================] - 0s 59ms/step - loss: 1.8897e-05 - categorical_accuracy: 1.0000\n",
-      "Epoch 1197/1500\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 1197/1500\n",
       "2/2 [==============================] - 0s 56ms/step - loss: 1.8858e-05 - categorical_accuracy: 1.0000\n",
       "Epoch 1198/1500\n",
       "2/2 [==============================] - 0s 56ms/step - loss: 1.8820e-05 - categorical_accuracy: 1.0000\n",
@@ -3334,13 +3308,7 @@
       "2/2 [==============================] - 0s 71ms/step - loss: 1.4309e-05 - categorical_accuracy: 1.0000\n",
       "Epoch 1334/1500\n",
       "2/2 [==============================] - 0s 63ms/step - loss: 1.4276e-05 - categorical_accuracy: 1.0000\n",
-      "Epoch 1335/1500\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 1335/1500\n",
       "2/2 [==============================] - 0s 55ms/step - loss: 1.4250e-05 - categorical_accuracy: 1.0000\n",
       "Epoch 1336/1500\n",
       "2/2 [==============================] - 0s 57ms/step - loss: 1.4236e-05 - categorical_accuracy: 1.0000\n",
@@ -3622,13 +3590,7 @@
       "2/2 [==============================] - 0s 67ms/step - loss: 1.1038e-05 - categorical_accuracy: 1.0000\n",
       "Epoch 1472/1500\n",
       "2/2 [==============================] - 0s 61ms/step - loss: 1.1021e-05 - categorical_accuracy: 1.0000\n",
-      "Epoch 1473/1500\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 1473/1500\n",
       "2/2 [==============================] - 0s 61ms/step - loss: 1.0992e-05 - categorical_accuracy: 1.0000\n",
       "Epoch 1474/1500\n",
       "2/2 [==============================] - 0s 58ms/step - loss: 1.0982e-05 - categorical_accuracy: 1.0000\n",
