--- a/Action Detection Refined.ipynb
+++ b/Action Detection Refined.ipynb
@@ -84,7 +84,7 @@
     }
    ],
    "source": [
-    "!pip install tensorflow==2.12.0 opencv-python mediapipe scikit-learn matplotlib pygame"
+    "!pip install tensorflow==2.13.0 opencv-python mediapipe scikit-learn matplotlib pygame"
    ]
   },
   {
@@ -715,13 +715,7 @@
       "1/1 [==============================] - 0s 65ms/step - loss: 0.0000e+00 - categorical_accuracy: 1.0000\n",
       "Epoch 71/200\n",
       "1/1 [==============================] - 0s 65ms/step - loss: 0.0000e+00 - categorical_accuracy: 1.0000\n",
-      "Epoch 72/200\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 72/200\n",
       "1/1 [==============================] - 0s 65ms/step - loss: 0.0000e+00 - categorical_accuracy: 1.0000\n",
       "Epoch 73/200\n",
       "1/1 [==============================] - 0s 68ms/step - loss: 0.0000e+00 - categorical_accuracy: 1.0000\n",
@@ -1523,13 +1517,7 @@
       "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
       "1/1 [==============================] - 0s 15ms/step\n",
       "L\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
       "1/1 [==============================] - 0s 15ms/step\n",
       "L\n",
       "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
