Update prediction code with some comments.

--- a/Prediction of L.ipynb
+++ b/Prediction of L.ipynb
@@ -539,12 +539,19 @@
     "        \n",
     "        if len(sequence) == 30:\n",
     "            res = model.predict(np.expand_dims(sequence, axis=0))[0]\n",
+    "            # In the last trial run, the model gave > 625 for when the L was correct. So, using trial and error\n",
+    "            # we are using 625 as the number here.\n",
+    "            # TODO figure out how to ask the model for a probability instead - when there is a single action.\n",
+    "            # The model (as previously written) used to pick one of the three actions... we don't want that here.\n",
+    "            # we have only one action. So this needs to be further refined. But for now, for a single action, this works.\n",
     "            if res/625 > threshold:\n",
     "                print(res)\n",
     "                pose_achieved.play()\n",
     "                # Show to screen\n",
     "                cv2.imshow('OpenCV Feed', image)\n",
+    "                # Show the matched pose for 10 seconds and break out.\n",
     "                cv2.waitKey(10000)\n",
+    "                break\n",
     "        # Break gracefully\n",
     "        if cv2.waitKey(10) & 0xFF == ord('q'):\n",
     "            break\n",
